--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "dotenv": "^16.4.7",
+    "firebase": "^11.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.9",
