--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "dotenv": "^16.4.7",
+    "firebase": "^11.1.0",
     "jsonwebtoken": "^9.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
