--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-dom": "17.0.1",
     "react-redux": "^7.2.9",
     "react-router-dom": "^6.28.0",
+    "react-slick": "^0.30.3",
     "redux": "^5.0.1",
+    "slick-carousel": "^1.8.1",
     "sp-pnp-js": "^3.0.10",
     "tslib": "2.3.1",
     "uuid": "^11.0.3"
@@ -51,6 +53,7 @@
     "@types/react": "17.0.45",
     "@types/react-dom": "17.0.17",
     "@types/react-redux": "^7.1.34",
+    "@types/react-slick": "^0.23.13",
     "@types/webpack-env": "~1.15.2",
     "ajv": "^6.12.5",
     "buffer": "^6.0.3",
