--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "bootstrap-icons": "^1.11.3",
     "dotenv": "^16.4.7",
     "firebase": "^11.1.0",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "popper.js": "^1.16.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.9",
