--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@pnp/spfx-controls-react": "3.19.0",
     "@pnp/spfx-property-controls": "^3.18.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "ag-grid-community": "^33.0.3",
+    "ag-grid-react": "^33.0.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "dotenv": "^16.4.7",
     "firebase": "^11.1.0",
+    "html2pdf.js": "^0.10.2",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
